# synergy-test

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a5c9b0809348_create_users_and_products_tables.py
backend/app/: database.py  main.py  models.py
backend/app/routes/: import_.py  products.py  users.py
backend/app/schemas/: products.py  users.py
backend/app/services/: import_service.py  products_service.py  users_service.py
backend/app/tests/: test_health.py  test_products.py  test_users.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/api/: api.ts
frontend/src/components/: EditProductModal.tsx  Header.tsx  ProductRow.tsx  ProductTable.tsx
frontend/src/types/: ProductTypes.ts  UserType.ts
